<resources>
    <string name="app_name">MDSApplication</string>
    <string name="start_playing">Incepe jocul</string>
    <string name="new_game">Joc nou</string>
    <string name="new_game_all_caps">JOC NOU</string>
    <string name="choose_pawn">Alege culoarea pionului</string>
    <string name="add_members">Adauga membru</string>
    <string name="assemble_team">Assembling team</string>

    <string name="insertTeamName">Introduceti numele echipei:</string>
    <string name="insertMemberName">Introduceti un membru:</string>
    <string name="backWithArrow">&#60; Inapoi</string>
    <string name="continueWithArrow">Continua &#62;</string>
    <string name="newGameRo">Joc nou</string>
    <string name="twoTeams">DOUA ECHIPE</string>
    <string name="threeTeams">TREI ECHIPE</string>
    <string name="fourTeams">PATRU ECHIPE</string>

    <string name="done">Done</string>
    <string name="start">START</string>
    <string name="_5">5</string>

    <string name="leaderboard">CLASAMENT</string>
    <string name="settings">REGULAMENT</string>

    <string name="str_challenge1">Challenge1</string>
    <string name="str_challenge6">Challenge6</string>
    <string name="_00_00">00:00</string>
    <string name="str_challenge2">Challenge2</string>
    <string name="str_challenge3">Challenge3</string>
    <string name="str_challenge4">Challenge4</string>
    <string name="str_challenge5">Challenge5</string>
    <string name="todo">TODO</string>
    <string name="regulament">regulament</string>


</resources>
