<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background13"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:id="@+id/relativeLayout"
    tools:ignore="MissingDefaultResource">

    <android.support.v7.widget.CardView
        android:id="@+id/twoTeamsCardView"
        android:layout_width="237dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/bluu"
        app:cardCornerRadius="40dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="236dp"
            android:padding="13dp"
            android:layout_height="70dp"
            android:fontFamily="casual"
            android:text="@string/twoTeams"
            android:textColor="@color/yellow"
            android:textAlignment="center"
            android:textSize="30sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/threeTeamsCardView"
        android:layout_width="237dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/cardview_dark_background"
        app:cardCornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/twoTeamsCardView"
        app:layout_constraintVertical_bias="0.108">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="casual"
            android:padding="13dp"
            android:text="@string/threeTeams"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="30sp" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/fourTeamsCardView"
        android:layout_width="237dp"
        android:layout_height="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/green"
        app:cardCornerRadius="40dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/threeTeamsCardView"
        app:layout_constraintVertical_bias="0.154">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="221dp"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:padding="13dp"
            android:text="@string/fourTeams"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="30sp" />
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>